# mod_dnssd

./: Makefile  README.md
src/: Makefile.am  Makefile.in  bootstrap.sh  configure  configure.ac
src/doc/: Makefile.am  Makefile.in  README.html.in  style.css
src/src/: Makefile.in  mod_dnssd.c
